# Citrine

./: .gitignore
Citrine.Core/: CMakeLists.txt  main.cpp
Citrine.Core/shaders/basic/: basic.vert  compile.sh  vert.spv
Citrine.Core/src/renderer/glfw/: Window.cpp  Window.h
Citrine.Core/src/renderer/vk/: CommandBuffer.h  CommandPool.h  GraphicsPipeline.cpp  GraphicsPipeline.h  LogicalDevice.h  PhysicalDevice.h  Queues.h  RenderPass.cpp  RenderPass.h  SwapChain.h  VkHelper.h  VkWindow.cpp  VkWindow.h  VulkanInstance.h
